--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "web3modal": "^1.9.8"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "start": "GENERATE_SOURCEMAP=false && react-app-rewired start",
+    "build": "GENERATE_SOURCEMAP=false && react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
